zoom & bbox on land masses
